feat: stat expired/pruned files.
